# DragonFlow

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
app/: index.html  package-lock.json  package.json  streamlit_app.py  vite.config.ts
app/api/: main.py
app/src/: App.tsx  index.css  main.tsx
configs/: model_v1.yaml
data/: README.md
data/processed/: data_coverage_report.csv  download_errors.csv  download_manifest.json  fundamental_csi2000_latest.csv  fundamental_csi2000_latest.parquet  index_daily_932000_proxy_equal_weight_20260101_20260531.csv  index_daily_932000_proxy_equal_weight_20260101_20260531.parquet  stock_daily_csi2000_qfq_20260101_20260531.parquet  stock_info_csi2000_latest.parquet  stock_spot_snapshot_csi2000_latest.csv  stock_spot_snapshot_csi2000_latest.parquet
docs/: spectral_tft_quant_strategy.md  tft_feature_architecture_v1.md  training_guide_kronosgraph_v1.md
notebooks/: dragonflow_analysis.html  dragonflow_analysis.ipynb  dragonflow_analysis.md  dragonflow_analysis_exec.ipynb  dragonflow_analysis_executed.ipynb
notebooks/_charts/: chart_3938630e2b4c4626afd113307283618b.html  (+7 more)
output/: index.html
public/: README.md
scripts/: 01_download_csi2000_data.py  02_finalize_partial.py  03_preprocess_data.py  03_synthesize_index_proxy.py  04_supplement_data.py  04_synthesize_spot_snapshot.py  05_feature_engineering.py  06_clustering.py  07_build_model_dataset.py  08_spectral_embedding.py  09_train_kline_encoder.py  10_train_tft.py  11_predict_tft.py  12_backtest_strategy.py  _oneshot_fetch_index.py  _oneshot_fill_stock_info.py
(+2055 files in other folders)
