[project]
name = "df"
version = "0.1.0"
description = "DragonFlow: A Visualization System for Market Leaders and Theme Rotation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.13.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pyarrow>=14.0.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "tenacity>=8.2.0",
    "loguru>=0.7.0",
    "requests>=2.31.0",
    "matplotlib>=3.8.0",
    "pyecharts>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "streamlit>=1.30.0",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dragonflow"]
